classes were crated

--- a/configs/Examples.properties
+++ b/configs/Examples.properties
@@ -1,8 +1,9 @@
 #Added additional key
-#Sat Apr 25 10:35:08 PDT 2020
-lastName=Smith
+#Fri May 01 17:32:05 PDT 2020
+browser=chrome
 phoneNumber=3101197788
 city=Paris
 contry=France
 name=John
+ber=3101197788
 population=88884
